WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157155
WebPlaybackControlsManager should not be owned by the WebPlaybackSessionInterfaceMac.
https://bugs.webkit.org/show_bug.cgi?id=157155
Summary
WebPlaybackControlsManager should not be owned by the WebPlaybackSessionInter...
Jer Noble
Reported
2016-04-28 15:59:15 PDT
WebPlaybackControlsManager should not be owned by the WebPlaybackSessionInterfaceMac.
Attachments
Patch
(17.20 KB, patch)
2016-04-28 16:02 PDT
,
Jer Noble
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2016-04-28 15:59:41 PDT
rdar://problem/25991724
Jer Noble
Comment 2
2016-04-28 16:02:22 PDT
Created
attachment 277657
[details]
Patch
Jer Noble
Comment 3
2016-04-29 11:24:32 PDT
Committed
r200254
: <
http://trac.webkit.org/changeset/200254
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug